# Robot-Says-Hello

ts_ws/devel/: .catkin  _setup_util.py  env.sh  setup.bash  setup.sh  setup.zsh
ts_ws/devel/.private/bwi_speech_services/: .catkin  .rosinstall  setup.sh
ts_ws/devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  setup.sh
ts_ws/devel/.private/grounded_dialogue_agent_ros/: .catkin  .rosinstall  setup.sh
ts_ws/devel/.private/gspeech/: .catkin  .rosinstall  setup.sh
ts_ws/devel/.private/hark_msgs/: .catkin  .rosinstall  setup.sh
ts_ws/devel/.private/villa_audio/: .catkin  .rosinstall  setup.sh
ts_ws/devel/.private/villa_sound_localization/: .catkin  .rosinstall  setup.sh
ts_ws/devel/include/bwi_speech_services/: RequestSoundTranscript.h  RequestSoundTranscriptRequest.h  RequestSoundTranscriptResponse.h
ts_ws/devel/include/grounded_dialogue_agent_ros/: ConductDialogueAction.h  ConductDialogueActionFeedback.h  ConductDialogueActionGoal.h  ConductDialogueActionResult.h  ConductDialogueFeedback.h  ConductDialogueGoal.h  ConductDialogueResult.h
ts_ws/devel/include/hark_msgs/: HarkFFT.h  HarkFFTVal.h  HarkFeature.h  HarkFeatureVal.h  HarkInt.h  HarkIntSrv.h  HarkIntSrvRequest.h  HarkIntSrvResponse.h  HarkJulius.h  HarkJuliusSrc.h  HarkJuliusSrcVal.h  HarkSource.h  HarkSourceVal.h  HarkSrcFFT.h  HarkSrcFFTVal.h  HarkSrcFeature.h  HarkSrcFeatureMFM.h  HarkSrcFeatureMFMVal.h  HarkSrcFeatureVal.h  HarkSrcWave.h  HarkSrcWaveVal.h  HarkWave.h  HarkWaveVal.h
ts_ws/devel/include/villa_audio/: RequestSoundTranscript.h  RequestSoundTranscriptRequest.h  RequestSoundTranscriptResponse.h
ts_ws/logs/grounded_dialogue_agent_ros/: build.cmake.000.log.stderr
ts_ws/logs/gspeech/: build.cmake.000.log.stderr
ts_ws/logs/villa_sound_localization/: build.cmake.000.log.stderr
ts_ws/src/: query_speech.py
ts_ws/src/villa_sound/: README.md
ts_ws/src/villa_sound/villa_audio/: CMakeLists.txt  package.xml
ts_ws/src/villa_sound/villa_audio/include/villa_audio/: shared_microphone_stream.h
ts_ws/src/villa_sound/villa_audio/launch/: automatic_speech_recognition.launch
ts_ws/src/villa_sound/villa_audio/scripts/: google_speech
ts_ws/src/villa_sound/villa_audio/src/: shared_microphone_stream.cpp  shared_microphone_stream_wrapper.cpp
ts_ws/src/villa_sound/villa_audio/src/villa_audio/: _shared_microphone_stream_wrapper_py.py  audio_stream.py  transcript_processing.py  tts.py
ts_ws/src/villa_sound/villa_audio/srv/: AddHintPhrases.srv  RequestSoundTranscript.srv
(+340 files in other folders)
